2009/02/02:
	- added VERSION
	- bugfixes in setup.py
2009/01/30:
	- code refactoring
	- deprecated Monolithic build
	- bugfixes in OCCViewer
	- moved back from glcanvas to Panel (in wxDisplay.py) for portability reason.
2009/01/28:
	- implemented cache system for gccxml
	- better handle of enums dependencies
	- added DISPLAY en vcheck in OCCViewer.py
2009/01/27:
	- bugfixes in OCCViewer.py and wxDisplay.py
	- moved Viewer to Display (conflict)
2009/01/26:
	- moved relative to absolute paths
	- bugfix in lib* search for MacOsX
	- code cleanup and refactoring
2009/01/24:
	- SWIG generated files are in different folders
2009/01/21:
	- added '-generate_swig' and '-with-doc' options
	- bug fix in -with_doc
	- added '-h' option
	- 'modular' and 'monolithic' moved to '-modular' and '-monolithic'
	- bugfix in StepData module
	- bugfix in OSD typedefs
2009/01/20:
	- switched 'generate_swig_modular' to 'modular'
	- better modularization (each class is now in its package).
	- MacOSX env settings
2009/01/12:
	- bugfix in monolithic build under Linux and MacOsX (excluding WNT* headers)
	- bugfix in StepAP203 typesetting
	- bugfix in WriteModuleEnums (BRepBndLib pygccxml exception)
2008/12/14:
	- More member functions in OCCViewer class
	- Module dependencies
2008/12/09:
	- added TShort package
	- big efforts on modular build
2008/12/07:
	- added environment variable to tell distutils to use g++ rather than gcc
2008/12/05:
	- Modular build of pythonOCC
	- added space optimization for MSVC (/O1)
2008/12/04:
	- Added Graphic3d_Group to Graphic3d set of classes
	- Display3d.cpp moved from C++ to Python
2008/12/03:
	- Added GetHandle() and GetObject() methods for Handle_* mechanism management
2008/12/01:
	- new package hierarchy
	- included Utils contribution from Jelle Feringa
	- added '-modern' SWIG directive
	- proper handle of Standard_Real & function prototype (SWIG typemaps)
	- new modules: TNaming_*, TDF_*, TFunction_*